# libmetal

./: .travis.yml  CMakeLists.txt  README.md
cmake/: options.cmake
doc/: Doxyfile.in
examples/system/freertos/xlnx_r5/: CMakeLists.txt
examples/system/freertos/xlnx_r5/amp_demo/: CMakeLists.txt  common.h  shmem_atomic_demod.c  sys_init.c
examples/system/freertos/zynqmp_r5/zynqmp_amp_demo/: common.h  sys_init.c
examples/system/generic/xlnx_r5/: CMakeLists.txt
examples/system/generic/xlnx_r5/amp_demo/: CMakeLists.txt  common.h  sys_init.c
examples/system/generic/zynqmp_r5/zynqmp_amp_demo/: common.h  sys_init.c
examples/system/linux/: CMakeLists.txt
examples/system/linux/xlnx/zynqmp_amp_demo/: common.h  ipi-mb.c  ipi-uio.c  ipi_latency_demo.c  shmem_atomic_demo.c  (+1 more)
lib/: CMakeLists.txt  atomic.h  config.h  device.c  device.h  init.c  io.c  io.h  irq.h  list.h  log.h  mbox.h  sys.h  utilities.h
lib/processor/microblazeel/: CMakeLists.txt
lib/processor/xtensa/: atomic.h  cpu.h
lib/system/freertos/: CMakeLists.txt  alloc.h  assert.h  cache.h  condition.h  init.c  io.c  io.h  irq.c  irq.h  mbox.h  mutex.h  sleep.h  sys.h
lib/system/freertos/xlnx/: CMakeLists.txt  sys.h
lib/system/generic/: CMakeLists.txt  alloc.h  assert.h  cache.h  condition.h  generic_io.c  init.c  io.c  io.h  irq.c  irq.h  mbox.h  mutex.h  sleep.h  sys.h
lib/system/generic/i500_apu/: CMakeLists.txt  irq.c  sys.c  sys.h
lib/system/generic/xtensa_common/: CMakeLists.txt  atomic.c  sys.c  sys.h
lib/system/linux/: CMakeLists.txt  alloc.h  assert.h  cache.h  condition.h  device.c  init.c  io.h  irq.c  irq.h  mbox.h  mutex.h  shmem.c  sleep.h  sys.h
lib/system/nuttx/: alloc.h  assert.h  cache.h  condition.h  io.c  io.h  irq.h  mutex.h  sleep.h  sys.h
lib/system/zephyr/: CMakeLists.txt  alloc.h  assert.h  cache.h  condition.h  device.c  init.c  io.h  irq.c  irq.h  log.h  mbox.c  mbox.h  mutex.h  sleep.h  sys.h
lib/system/zephyr/cortexm/: sys.c
test/: CMakeLists.txt  metal-test.c  metal-test.h
test/system/freertos/: CMakeLists.txt
test/system/generic/: CMakeLists.txt
test/system/generic/i500_apu/: CMakeLists.txt  helper.c  rsc_table.c  rsc_table.h  specs
test/system/linux/: CMakeLists.txt  device_helpers.c
test/system/zephyr/: main.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+13 files in other folders)
